--- a/esp32-cam_http_stream/main/CMakeLists.txt
+++ b/esp32-cam_http_stream/main/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRCS "camera_httpd.c"
                     INCLUDE_DIRS "."
-                    REQUIRES esp_http_server esp32-camera nvs_flash esp_wifi esp_timer esp_netif esp_psram)
+                    REQUIRES esp_http_server esp32-camera nvs_flash esp_wifi esp_timer esp_netif esp_psram
+                    PRIV_REQUIRES mbedtls)
